# openvair

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_CONVENTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.en.md  README.md  README.ru.md  README_test_guide.md  VNC_CODE_QUALITY_REPORT.md  VNC_PORT_MANAGEMENT_README.md  alembic.ini  alembic_guide.md  install.sh  motivation.md  mypy.ini  mypy_use.md  new_install.sh  openssl.cnf  project_config.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  simple_vnc_test.py  test_vnc_system.py  third_party_requirements.txt  uninstall.sh  update.sh
.cursor/rules/: module-initialization-and-communications-setup.mdc  rpc.mdc  storage.mdc
.githooks/: mypy  ruff
.github/: CODEOWNERS
.github/workflows/: mirror-to-gitflic.yml  mirroring.yml  sync.yml  test_install.yml
cluster_config/: .env.cmp-1  .env.cmp-2  .env.ctrl-1  cluster.toml
docs/entrypoints/: api.py
openvair/: LICENSE  config.py  conftest.py  main.py  rpc_queues.py  web-app.service
openvair/abstracts/: base_exception.py  exceptions.py  serializer.py
openvair/alembic/: env.py
openvair/alembic/versions/: 1_initial_revisions.py
openvair/cluster_development_files/: run_agent.py  vm_manager_dryrun.py
openvair/common/: base_command_dto.py  base_pydantic_models.py  orm_types.py  pydantic_types.py  schemas.py
openvair/common/configs/: pydantic.py  pydantic_config.py
openvair/common/repositories/: abstract.py  base_sqlalchemy.py  exceptions.py
openvair/common/serialization/: base_dto.py  base_serializer.py  serializer_hub.py
openvair/common/uow/: abstract.py  base_sqlalchemy.py
openvair/interfaces/: vm_service_interface.py  volume_service_interface.py
openvair/libs/: context_managers.py  processes.py  testing_utils.py
openvair/libs/auth/: jwt_utils.py
openvair/libs/cli/: exceptions.py  executor.py  models.py  test_executor.py
openvair/libs/client/: base_client.py  config.py  image_client.py  prometheus_client.py  storage_client.py  vm_client.py  volume_client.py
openvair/libs/clone/: exceptions.py  utils.py
openvair/libs/contracts/: control_plane_service.py  event_store_service.py
openvair/libs/data_handlers/json/: parser.py  serializer.py
openvair/libs/data_handlers/xml/: exceptions.py  parser.py  serializer.py
openvair/libs/data_handlers/yaml/: parser.py  serializer.py
openvair/libs/libvirt/: connection.py  network.py  vm.py
openvair/libs/log/: __init__.py  logging_config.toml  setup.py
openvair/libs/messaging/: config.py  exceptions.py  messaging_agents.py  protocol.py  rpc.py  utils.py
openvair/libs/messaging/rpc/: base.py  decorators.py  rabbit_base.py  rabbit_rpc.py
openvair/libs/messaging/service_interfaces/: backup.py  control_plane.py  event_store.py  image.py  storage.py  (+3 more)
openvair/libs/network/: exceptions.py  utils.py
openvair/libs/qemu_img/: adapter.py  exceptions.py  executor.py
openvair/libs/template_rendering/: base_renderer.py
openvair/libs/templating/: xml_collector.py  yaml_collector.py
openvair/libs/testing/: .env.test  config.py  utils.py
openvair/libs/validation/: validators.py
openvair/modules/: base_manager.py
openvair/modules/backup/: backup-domain.service  backup-service-layer.service  config.py  schemas.py
openvair/modules/block_device/: block_device-domain.service  block_device-service-layer.service  config.py
openvair/modules/control_plane/: config.py
openvair/modules/dashboard/: config.py  dashboard-service-layer.service  readme.md
openvair/modules/event_store/: config.py  event_store-service-layer.service
openvair/modules/image/: config.py  image-domain.service  image-service-layer.service
openvair/modules/network/: config.py  network-domain.service  network-service-layer.service  utils.py
openvair/modules/notification/: config.py  notification-domain.service  notification-service-layer.service
openvair/modules/snmp/: config.py  snmp-domain.service
openvair/modules/storage/: config.py  storage-domain.service  storage-service-layer.service
openvair/modules/template/: config.py  template-domain.service  template-service-layer.service
openvair/modules/tools/: base_exception.py  libvirt_utils.py  utils.py  validators.py
openvair/modules/user/: config.py  user-service-layer.service
openvair/modules/virtual_machines/: config.py  vm-domain.service  vm-service-layer.service
openvair/modules/virtual_network/: config.py  virtual_network-domain.service  virtual_network-service-layer.service
openvair/modules/volume/: config.py  volume-domain.service  volume-service-layer.service
openvair/rpc_clients/: image_rpc_client.py  storage_rpc_client.py  vm_rpc_client.py  volume_rpc_client.py
openvair/shared_models/: execution_result.py
openvair_installer/: .gitignore  Cargo.toml  README.md
openvair_installer/src/: config.rs  constants.rs  extended_steps.rs  installer.rs  logging.rs  main.rs  system.rs  tui.rs
scripts/: vnc_cleanup_daemon.py
(+404 files in other folders)
