[project]
name = "openvair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.13.2",
    "annotated-types==0.7.0",
    "bcrypt==4.0.1",
    "cffi==1.16.0",
    "cryptography==43.0.0",
    "dnspython==2.6.1",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.5",
    "fastapi-pagination==0.12.32",
    "httpx==0.28.1",
    "jinja2==3.1.4",
    "libvirt-python==10.5.0",
    "mako==1.3.5",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "passlib==1.7.4",
    "pika==1.3.2",
    "psutil==6.0.0",
    "psycopg2>=2.9",
    "pyagentx3==0.1.4",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart==0.0.9",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "sentry-sdk==2.11.0",
    "six==1.16.0",
    "sqlalchemy==2.0.32",
    "toml==0.10.2",
    "types-toml==0.10.8.20240310",
    "typing-extensions==4.12.2",
    "uvicorn[standard]>=0.30",
    "watchfiles==0.22.0",
    "xmltodict==0.13.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pika-stubs>=0.1.3",
    "pre-commit>=4.3.0",
    "pytest>=8.2",
    "pytest-order>=1.3.0",
    "ruff>=0.13.0",
    "types-aiofiles>=24.1.0.20250822",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
