[project]
name = "openvair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=24.1.0",
    "alembic~=1.16",
    "fastapi~=0.116",
    "fastapi-pagination~=0.14",
    "jinja2~=3.1",
    "libvirt-python==10.5.0",
    "passlib==1.7.4",
    "pika==1.3.2",
    "psutil==6.0.0",
    "pyagentx3==0.1.4",
    "pydantic~=2.11",
    "pydantic-settings==2.8.1",
    "pyjwt~=2.10.1",
    "sentry-sdk==2.11.0",
    "sqlalchemy~=2.0",
    "toml==0.10.2",
    "uvicorn[standard]==0.35",
    "xmltodict==0.13.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy~=1.11.2",
    "pika-stubs>=0.1.3",
    "pre-commit>=4.3.0",
    "pytest~=8.4",
    "pytest-order>=1.3.0",
    "ruff~=0.13.0",
    "types-aiofiles>=24.1.0.20250822",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "types-toml==0.10.8.20240310",
]
