[package]
name = "openvair_installer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
owo-colors = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
ratatui = "0.25"
crossterm = "0.27"
dialoguer = "0.11"        # interactive questions
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
